--- a/config.json
+++ b/config.json
@@ -1,34 +1,33 @@
 {
   "experiment_name": "default",
-
-  "num_epoch": 75,
-
+  "num_epoch": 100,
   "dataset": {
-    "root": "/media/jpl/T7/CartoonGAN_Data",
+    "root": "./data",
     "batch_size": 16
   },
-
   "model": {
     "G_path": "./models/G_default.pt",
     "D_path": "./models/D_default.pt"
   },
-
   "optim": {
-    "D_lr": 1e-3,
-    "G_lr": 1e-4,
-    "D_step": [20, 40, 60],
-    "G_step": [40, 50, 90],
+    "D_lr": 2e-4,
+    "G_lr": 2e-4,
+    "D_step": [
+      50,
+      75
+    ],
+    "G_step": [
+      50,
+      75
+    ],
     "D_gamma": 0.1,
     "G_gamma": 0.1
   },
-
   "train": {
-    "G_warming": 15
+    "G_warming": 10
   },
-
   "valid": {
     "save_results": true,
-    "save_path": "./data/valid_results",
-    "save_num": 1
+    "save_path": "./data/valid_results"
   }
 }
